fix button alignment for mobile

--- a/07_Node/20_social_media/frontend/src/styles/cards/psthbnl.module.css
+++ b/07_Node/20_social_media/frontend/src/styles/cards/psthbnl.module.css
@@ -109,9 +109,6 @@
     padding: 0.5em;
     cursor: pointer;
     color: rgb(36, 158, 240);
-    display: block;
-    margin-left: auto;
-    margin-right: 0.5em;
     white-space: nowrap;
 }
 
@@ -122,8 +119,6 @@
 
 .expandText::before {
     content: "Show More";
-    display: inline-block;
-    min-width: max-content;
 }
 
 .expandText:checked::before {
@@ -133,7 +128,7 @@
     padding: 0;
 }
 
-.postBodyText:has(+ .expandText:checked) {
+.postBodyText:has(+ div>.expandText:checked) {
     max-height: unset;
     height: auto;
 }
